# geom-kernel

./: CMakeLists.txt  README.md  architecture.md  phase6_output.txt  phase6_output_ascii.txt  roadmap.md
include/: Autodiff.h  Booleans.h  BoundingBox.h  DensityField.h  Discretization.h  DualContouring.h  Field.h  Fields.h  Geometry.h  MCTables.h  Manufacturing.h  MarchingCubes.h  Mesh.h  MeshSDF.h  Modifiers.h  Octree.h  Optimization.h  PointCloud.h  Primitives.h  QEF.h  SDF.h  STLExporter.h  STLImporter.h  ShapeKernel.h  SmoothBooleans.h  TPMS.h  TopoOptimizer.h  Transform.h  VoxelGrid.h
src/: MCTables.cpp  gallery_showcase.cpp  main.cpp  mvp_test.cpp  phase2_test.cpp  phase3_benchmark.cpp  phase4_test.cpp  phase5_test.cpp  phase6_test.cpp  phase7_test.cpp  phase8_test.cpp  refactor_test.cpp  test_booleans.cpp  test_core_utils.cpp  test_performance.cpp  test_primitives.cpp  test_smooth_booleans.cpp  test_tpms.cpp
